--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,10 @@
 {
-  "bracketSpacing": false,
-  "singleQuote": true,
-  "jsxBracketSameLine": true,
-  "trailingComma": "es5",
-  "printWidth": 100,
-  "semi": true,
-  "endOfLine": "auto"
+    "bracketSpacing": false,
+    "singleQuote": true,
+    "jsxBracketSameLine": true,
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "semi": true,
+    "endOfLine": "auto",
+    "tabWidth": 4
 }
